--- a/html/courses.html
+++ b/html/courses.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="./images/icons/logo.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./../css/style.css" />
   <link rel="stylesheet" href="./../css/course.css" />
   <link rel="stylesheet" href="./../font-awesome-4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="./../font-awesome-4.7.0/css/font-awesome.css" />
-  <title>Site Name</title>
+  <title>Desmond Market</title>
 </head>
 
 <body>
@@ -24,9 +24,9 @@
       <nav>
         <div class="nav-brand">
           <a href="./../index.html">
-            <img src="./../images/logo.png" alt="Logo" />
+            <img src="./../images/icons/logo.png" alt="Logo" />
           </a>
-          <a href="./../index.html">Site Name</a>
+          <a href="./../index.html">Desmond Market</a>
         </div>
         <div class="nav-bars">
           <div href="" class="nav-toggle" data-toggle="nav-links">
@@ -71,10 +71,9 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
-            <!-- <span>(5 Reviews)</span> -->
           </div>
           <div class="btnInfoRegister">
-            <a href="https://wa.me/233594500785?text=Hello%20Admin,%20I%20would%20like%20to%20join%20the%20WhatsApp%20group.%20Can%20you%20please%20send%20me%20the%20invite%20link?"
+            <a href="https://wa.me/233558219451?text=Hello%20Admin,%20I%20would%20like%20to%20join%20the%20WhatsApp%20group.%20Can%20you%20please%20send%20me%20the%20invite%20link?"
               target="_blank" rel="noopener" class="btn">
               Register
             </a>
@@ -95,20 +94,20 @@
       <div class="footer-content">
         <div class="footer-content-about">
           <h3>
-            <a href="./../index.html">Site Name</a>
+            <a href="./../index.html">Desmond Market</a>
           </h3>
           <p>
             Our mission is to provide the best online courses for our users.
           </p>
           <p>
             Contact us on
-            <a href="https://wa.me/233594500785?text=Hello%20Sir,%20I%20am%20...%0AI%20would%20like%20to%20ask%20for%20more%20information%20about%20your%20courses."
+            <a href="https://wa.me/233558219451?text=Hello%20Sir,%20I%20am%20...%0AI%20would%20like%20to%20ask%20for%20more%20information%20about%20your%20courses."
               target="_blank" rel="noopener">
               <i class="fa fa-whatsapp"></i>Whatsapp</a>
           </p>
         </div>
         <div class="footer-content-logo">
-          <a href="#"><img src="./../images/logo.png" alt="Logo" /></a>
+          <a href="#"><img src="./../images/icons/logo.png" alt="Logo" /></a>
         </div>
         <div class="footer-content-social">
           <h3>Social Media</h3>
@@ -123,7 +122,7 @@
             <a href="#">Terms & Conditions</a>
           </div>
 
-          <p>&copy; 2025 Site Name. All rights reserved.</p>
+          <p>&copy; 2025 Desmond Market. All rights reserved.</p>
         </div>
       </div>
     </div>
