--- a/html/about.html
+++ b/html/about.html
@@ -1,216 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap"
-    />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./../css/style.css" />
-    <link rel="stylesheet" href="./../css/about.css" />
-    <link
-      rel="stylesheet"
-      href="./../font-awesome-4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="./../font-awesome-4.7.0/css/font-awesome.css"
-    />
-    <title>Site Name</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <nav>
-          <div class="nav-brand">
-            <a href="./../index.html">
-              <img src="./../images/logo.png" alt="Logo" />
-            </a>
-            <a href="./../index.html">Site Name</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" />
+  <link rel="shortcut icon" href="./images/icons/logo.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="./../css/style.css" />
+  <link rel="stylesheet" href="./../css/about.css" />
+  <link rel="stylesheet" href="./../font-awesome-4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="./../font-awesome-4.7.0/css/font-awesome.css" />
+  <title>Desmond Market</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <nav>
+        <div class="nav-brand">
+          <a href="./../index.html">
+            <img src="./../images/icons/logo.png" alt="Logo" />
+          </a>
+          <a href="./../index.html">Desmond Market</a>
+        </div>
+        <div class="nav-bars">
+          <div href="" class="nav-toggle" data-toggle="nav-links">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-close"></i>
           </div>
-          <div class="nav-bars">
-            <div href="" class="nav-toggle" data-toggle="nav-links">
-              <i class="fas fa-bars"></i>
-              <i class="fas fa-close"></i>
+        </div>
+        <ul class="nav-links">
+          <li><a href="./../index.html">Home</a></li>
+          <li><a href="./../html/courses.html">Course</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="intro">
+      <div class="container">
+        <div class="intro-content">
+          <h1>ABOUT US</h1>
+          <p>
+            Welcome to the <b>Desmond Affiliate Marketing</b> Course, your ultimate destination for mastering the art of
+            affiliate
+            marketing. Our mission is to empower individuals and entrepreneurs with the knowledge and skills needed to
+            create
+            successful and sustainable online businesses through affiliate marketing.
+          </p>
+          <br><br>
+          <h2>Who We Are</h2>
+          <p>
+            The <b>Desmond Affiliate Marketing</b> Course was founded by Desmond, an experienced digital entrepreneur
+            with a
+            passion for
+            helping others achieve financial independence. With years of expertise in online marketing, Desmond has
+            created a
+            step-by-step program designed to guide beginners and experienced marketers alike toward success in the
+            affiliate
+            marketing industry.
+          </p>
+          <a href="./html/courses.html" class="btn">Get Started</a>
+        </div>
+        <div class="intro-img">
+          <div class="intro-img-overlay">
+            <img src="./../images/pic2.png" alt="Intro" />
+          </div>
+
+          <div class="intro-img-text">
+            <h2>Discover Our Courses</h2>
+            <p>Unlock the secrets of successful affiliate marketing. Learn strategies to maximize your earnings and grow
+              your online
+              presence with our expert-led courses.</p>
+
+            <a href="./courses.html" class="btn">View Courses</a>
+
+            <div class="intro-img-social">
+              <a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" title="twitter"><i class="fab fa-twitter"></i></a>
+              <a href="#" title="instagram"><i class="fab fa-instagram"></i></a>
+              <a href="#" title="linkedin"><i class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
-          <ul class="nav-links">
-            <li><a href="./../index.html">Home</a></li>
-            <li><a href="./../html/courses.html">Course</a></li>
+        </div>
+        <div class="intro-content">
+          <h2>What We Offer</h2>
+          <p>
+            Our course provides comprehensive training that covers everything from the basics of affiliate marketing to
+            advanced
+            strategies for scaling your business. Here’s what you can expect:
+          </p>
+          <ul class="intro-list">
+            <li><b>Beginner-Friendly Lessons</b> – No prior experience is needed; we start from the ground up.</li>
+            <li><b>Advanced Strategies</b> – Learn the latest tactics for maximizing affiliate sales.</li>
+            <li><b>Hands-on Training</b> – Practical assignments and real-world applications.</li>
+            <li><b>Expert Support</b> – Gain access to a community of like-minded individuals and expert mentorship.
+            </li>
+            <li><b>Lifetime Access</b> – Learn at your own pace with ongoing updates and support.</li>
           </ul>
-        </nav>
-      </div>
-    </header>
-
-    <main>
-      <section class="intro">
-        <div class="container">
-          <div class="intro-content">
-            <h1>ABOUT US</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odio
-              sit dolore omnis ratione animi qui et vel facere vero
-              exercitationem sunt corporis quaerat numquam ut, blanditiis ipsa
-              veritatis alias! Magni maxime excepturi eaque vitae culpa sequi
-              repellat sit. Culpa recusandae aspernatur saepe necessitatibus
-              consequuntur nobis vitae eius! Consectetur cum a laudantium
-              provident iusto, molestiae impedit libero incidunt magni unde!
-              Soluta dolores beatae, sapiente ut, laudantium tenetur vero
-              voluptatum aut est necessitatibus quia iusto facilis unde eveniet.
-              Velit suscipit, non saepe eum eius unde? Assumenda quod in
-              expedita natus voluptate. Necessitatibus nulla asperiores eveniet
-              placeat, veritatis blanditiis. Saepe optio hic quas amet dolores
-              sequi expedita adipisci reiciendis natus. Neque qui quisquam non,
-              velit sint placeat quos ab error illum suscipit! Hic itaque
-              laboriosam nihil modi vitae natus aperiam quas saepe labore
-              temporibus odit neque explicabo totam eum aliquid, optio a eius
-              deleniti facere recusandae dolores nulla, mollitia consequuntur
-              rerum! Amet. Vitae voluptas expedita, fugit provident consequatur
-              officia nulla numquam rerum? Provident omnis nesciunt repellendus
-              voluptatem accusantium dolor magni? Cupiditate, iusto. Ab labore
-              iure debitis sed quibusdam cupiditate, eius incidunt quis! Magni,
-              animi! Consectetur doloremque velit eligendi alias voluptates nam
-              reprehenderit doloribus aliquam reiciendis, quos adipisci delectus
-              laboriosam molestias magnam, rerum consequatur nemo consequuntur
-              dolores obcaecati! Tenetur maxime quidem consectetur asperiores.
-              Officia atque recusandae perferendis quasi animi beatae libero
-              temporibus delectus quam, molestias illum quo debitis quod dolores
-              impedit reiciendis? Eaque illum corporis fugiat natus deserunt
-              sunt necessitatibus reprehenderit asperiores quis? soluta
-              architecto recusandae atque iste modi nobis esse distinctio
-              mollitia. Et, quisquam! Odit quisquam ea commodi magnam.
-            </p>
-            <a href="./html/courses.html" class="btn">Get Started</a>
-          </div>
-          <div class="intro-img">
-            <div class="intro-img-overlay">
-              <img src="./../images/7.jpg" alt="Intro" />
-            </div>
-
-            <div class="intro-img-text">
-              <h2>Discover Our Courses</h2>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-
-              <a href="./courses.html" class="btn">View Courses</a>
-
-              <div class="intro-img-social">
-                <a href="#" title="facebook"
-                  ><i class="fab fa-facebook-f"></i
-                ></a>
-                <a href="#" title="twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" title="instagram"
-                  ><i class="fab fa-instagram"></i
-                ></a>
-                <a href="#" title="linkedin"
-                  ><i class="fab fa-linkedin-in"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="intro-content">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odio
-              sit dolore omnis ratione animi qui et vel facere vero
-              exercitationem sunt corporis quaerat numquam ut, blanditiis ipsa
-              veritatis alias! Magni maxime excepturi eaque vitae culpa sequi
-              repellat sit. Culpa recusandae aspernatur saepe necessitatibus
-              consequuntur nobis vitae eius! Consectetur cum a laudantium
-              provident iusto, molestiae impedit libero incidunt magni unde!
-              Soluta dolores beatae, sapiente ut, laudantium tenetur vero
-              voluptatum aut est necessitatibus quia iusto facilis unde eveniet.
-              Velit suscipit, non saepe eum eius unde? Assumenda quod in
-              expedita natus voluptate. Necessitatibus nulla asperiores eveniet
-              placeat, veritatis blanditiis. Saepe optio hic quas amet dolores
-              sequi expedita adipisci reiciendis natus. Neque qui quisquam non,
-              velit sint placeat quos ab error illum suscipit! Hic itaque
-              laboriosam nihil modi vitae natus aperiam quas saepe labore
-              temporibus odit neque explicabo totam eum aliquid, optio a eius
-              deleniti facere recusandae dolores nulla, mollitia consequuntur
-              rerum! Amet. Vitae voluptas expedita, fugit provident consequatur
-              officia nulla numquam rerum? Provident omnis nesciunt repellendus
-              voluptatem accusantium dolor magni? Cupiditate, iusto. Ab labore
-              iure debitis sed quibusdam cupiditate, eius incidunt quis! Magni,
-              animi! Consectetur doloremque velit eligendi alias voluptates nam
-              reprehenderit doloribus aliquam reiciendis, quos adipisci delectus
-              laboriosam molestias magnam, rerum consequatur nemo consequuntur
-              dolores obcaecati! Tenetur maxime quidem consectetur asperiores.
-              Officia atque recusandae perferendis quasi animi beatae libero
-              temporibus delectus quam, molestias illum quo debitis quod dolores
-              impedit reiciendis? Eaque illum corporis fugiat natus deserunt
-              sunt necessitatibus reprehenderit asperiores quis? soluta
-              architecto recusandae atque iste modi nobis esse distinctio
-              mollitia. Et, quisquam! Odit quisquam ea commodi magnam.
-            </p>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-content-about">
-            <h3>
-              <a href="./../index.html">Site Name</a>
-            </h3>
-            <p>
-              Our mission is to provide the best online courses for our users.
-            </p>
-            <p>
-              Contact us on
-              <a
-                href="https://wa.me/233594500785?text=Hello%20Sir,%20I%20am%20...%0AI%20would%20like%20to%20ask%20for%20more%20information%20about%20your%20courses."
-                target="_blank"
-                rel="noopener"
-              >
-                <i class="fa fa-whatsapp"></i>Whatsapp</a
-              >
-            </p>
-          </div>
-          <div class="footer-content-logo">
-            <a href="#"><img src="./../images/logo.png" alt="Logo" /></a>
-          </div>
-          <div class="footer-content-social">
-            <h3>Social Media</h3>
-            <a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" title="twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" title="instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" title="linkedin"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-          <div class="footer-content-copyright">
-            <div class="footer-content-links">
-              <a href="#">Privacy Policy</a> &amp;
-              <a href="#">Terms & Conditions</a>
-            </div>
-
-            <p>&copy; 2025 Site Name. All rights reserved.</p>
-          </div>
+          <br><br><br>
+          <h2>Why Choose Us?</h2>
+          <p>
+            At <b>Desmond Affiliate Marketing</b>, we are committed to providing the highest quality education and
+            support to our
+            students. Here are a few reasons why you should choose us:
+          </p>
+          <ul class="intro-list">
+            <li><b>Proven Success Methods</b> – Our course is based on strategies that work in real-world scenarios.
+            </li>
+            <li><b>Affordable & Valuable</b> – Get high-quality training at an affordable price.</li>
+            <li><b>Results-Driven Approach</b> – We focus on actionable steps that generate tangible results.</li>
+          </ul>
         </div>
       </div>
-    </footer>
-  </body>
-  <script src="./../js/app.js"></script>
-  <script src="./../js/course.js"></script>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-content-about">
+          <h3>
+            <a href="./../index.html">Desmond Market</a>
+          </h3>
+          <p>
+            Our mission is to provide the best online courses for our users.
+          </p>
+          <p>
+            Contact us on
+            <a href="https://wa.me/233558219451?text=Hello%20Sir,%20I%20am%20...%0AI%20would%20like%20to%20ask%20for%20more%20information%20about%20your%20courses."
+              target="_blank" rel="noopener">
+              <i class="fa fa-whatsapp"></i>Whatsapp</a>
+          </p>
+        </div>
+        <div class="footer-content-logo">
+          <a href="#"><img src="./../images/icons/logo.png" alt="Logo" /></a>
+        </div>
+        <div class="footer-content-social">
+          <h3>Social Media</h3>
+          <a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" title="twitter"><i class="fab fa-twitter"></i></a>
+          <a href="#" title="instagram"><i class="fab fa-instagram"></i></a>
+          <a href="#" title="linkedin"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <div class="footer-content-copyright">
+          <div class="footer-content-links">
+            <a href="#">Privacy Policy</a> &amp;
+            <a href="#">Terms & Conditions</a>
+          </div>
+
+          <p>&copy; 2025 Desmond Market. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+<script src="./../js/app.js"></script>
+<script src="./../js/course.js"></script>
+
 </html>
