--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" />
-  <link rel="shortcut icon" href="./images/icons/logo.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="../images/icons/logo.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./../css/style.css" />
   <link rel="stylesheet" href="./../css/about.css" />
   <link rel="stylesheet" href="./../font-awesome-4.7.0/css/font-awesome.min.css" />
